# crane

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
crane/: __init__.py  featurizer.py  model.py
crane/core/: __init__.py  artifacts.py  config.py  featurizer.py  model.py  output.py
crane/data/: __init__.py  batching.py  data.py  dataset.py  datasets.py  multi_session.py  sampler.py  selectors.py  single_session.py  structures.py
crane/dataset/: __init__.py  multi_session.py  sampler.py  single_session.py
crane/eval/: __init__.py  artifacts.py  bench.py  decorators.py  protocols.py  result.py  sweep.py  tasks.py  types.py
crane/eval/data/: __init__.py  base.py  subject.py
crane/eval/exec/: __init__.py  base.py  sequential.py
crane/eval/filter/: __init__.py  base.py  custom.py  group.py  regex.py
crane/eval/fns/: __init__.py  linear_train.py  zero_shot.py
crane/eval/plan/: __init__.py  base.py  grouped.py
crane/eval/score/: core.py
crane/models/: __init__.py  base.py
crane/preprocess/: __init__.py  electrode_subset.py  rereference.py  rereferencing.py  spectrogram.py  subset.py  utils.py
crane/train/: trainer.py
crane/training/: __init__.py  lightning_module.py
docs/: index.md
docs/reference/: dataset.md  index.md  preprocess.md
reference/: index.html
reference/dataset/: index.html
reference/preprocess/: index.html
styles/: extra.css
tests/: conftest.py  test_featurizer.py
tests/core/: test_featurizer.py
tests/data/: test_data.py  test_dataset.py  test_selectors.py
tests/eval/: test_decorators.py  test_sweep.py
tests/preprocess/: test_electrode_subset.py  test_spectrogram.py  test_subset.py
tests/unit/preprocess/: helpers.py  test_electrode_subset.py  test_spectrogram.py
