[project]
name = "crane"
version = "0.1.0"
description = "Machine learning components for neural interfaces"
authors = [
    { name = "Andrii Zahorodnii" },
    { name = "Alexander Brady" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.3.9",
    "temporaldata>=0.1.3",
    "torch>=2.8.0",
    "torch-brain @ git+https://github.com/neuro-galaxy/torch_brain",
    "transformers>=5.4.0",
]

[dependency-groups]
dev = [
    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",

    # Linting / Formatting / Type Checking
    "mypy>=1.18.2",
    "ruff>=0.13.3",

    # Testing
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501", "F722"]            # let the formatter handle wrapping, jaxtyping support

[tool.ruff.lint.isort]
known-first-party = ["crane"]

[tool.mypy]
python_version = "3.12"
files = ["crane", "tests"]
exclude = ["\\.venv", "env", "build", "dist"]
follow_imports = "skip"  # don't analyze third-party libs
ignore_missing_imports = true

[tool.coverage.report]
omit = ["*/__init__.py"]